<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000"
        tools:context=".RegistrationActivity">

    <EditText
            android:textColorHint="#fffefe"
            android:textColor="#fffefe"
            android:background="@drawable/logo_round"
            android:id="@+id/firstname"
            android:hint="@string/firstname"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_gravity="top"
            android:layout_marginTop="160dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:textColorHint="#fffefe"
            android:textColor="#fffefe"
            android:background="@drawable/logo_round"
            android:id="@+id/lastname"
            android:hint="@string/lastname"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_gravity="top"
            android:layout_marginTop="210dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:textColorHint="#fffefe"
            android:textColor="#fffefe"
            android:background="@drawable/logo_round"
            android:id="@+id/username"
            android:hint="@string/username"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_gravity="top"
            android:layout_marginTop="260dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:inputType="textPassword"
            android:textColorHint="#fffefe"
            android:textColor="#fffefe"
            android:background="@drawable/logo_round"
            android:id="@+id/password"
            android:hint="@string/password"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_gravity="top"
            android:layout_marginTop="310dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:inputType="textPassword"
            android:textColorHint="#fffefe"
            android:textColor="#fffefe"
            android:background="@drawable/logo_round"
            android:id="@+id/confirmpassword"
            android:hint="@string/confirmpassword"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_gravity="top"
            android:layout_marginTop="360dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:inputType="textEmailAddress"
            android:textColorHint="#fffefe"
            android:textColor="#fffefe"
            android:background="@drawable/logo_round"
            android:id="@+id/email"
            android:hint="@string/email"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_gravity="top"
            android:layout_marginTop="410dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:inputType="datetime"
            android:textColorHint="#fffefe"
            android:textColor="#fffefe"
            android:background="@drawable/logo_round"
            android:id="@+id/birthdata"
            android:hint="@string/birthdata"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_gravity="top"
            android:layout_marginTop="460dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:textColor="#fffefe"
            android:background="@drawable/logo_round"
            android:id="@+id/signUpButtonReg"
            android:text="@string/singUpButton"
            android:textSize="20sp"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:textColor="#015F9D"
            android:id="@+id/Space"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="S p a c e"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="100dp"
            android:layout_gravity="top"
            android:layout_width="match_parent"
            android:layout_height="70dp"/>

    <EditText
            android:textColor="#0a56c9"
            android:id="@+id/Communicator"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="Communicator"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_gravity="top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</FrameLayout>