<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000"
        tools:context=".AuthenticationActivity">

    <TextView
            android:textColor="#0a56c9"
            android:id="@+id/Space"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="S p a c e"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="120dp"
            android:layout_marginStart="125dp"
            android:layout_gravity="top"
            android:layout_width="match_parent"
            android:layout_height="70dp"/>

    <TextView
            android:textColor="#0a56c9"
            android:id="@+id/Communicator"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="Communicator"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_gravity="top"
            android:layout_width="match_parent"
            android:layout_height="70dp"/>

    <EditText
            android:textColorHint="#fffefe"
            android:textColor="#fffefe"
            android:background="@drawable/logo_round"
            android:textAlignment="center"
            android:id="@+id/userNameEditTextAuth"
            android:hint="@string/usernameEditText_hint"
            android:inputType="text"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:textColorHint="#fffefe"
            android:textColor="#fffefe"
            android:background="@drawable/logo_round"
            android:id="@+id/passwordEditTextAuth"
            android:hint="@string/passwordEditText_hint"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:textColor="#fffefe"
            android:background="@drawable/logo_round"
            android:id="@+id/signInButtonAuth"
            android:text="@string/signInButton_text"
            android:textSize="20sp"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:textColor="#fffefe"
            android:background="@drawable/logo_round"
            android:id="@+id/signUpButtonAuth"
            android:text="@string/signUpButton_text"
            android:textSize="20sp"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



</FrameLayout>